Stuff might work

--- a/snapw.config
+++ b/snapw.config
@@ -1,21 +1,24 @@
-master  iln01.stanford.edu:9121
-hosts   iln02.stanford.edu:9122,iln03.stanford.edu:9123,iln04.stanford.edu:9124,iln05.stanford.edu:9125,iln06.stanford.edu:9126,iln07.stanford.edu:9127,iln08.stanford.edu:9128:iln09.stanford.edu:9129
+master  10.79.15.11:9121
+#master  iln01.stanford.edu:9121
+#hosts   10.79.15.12:9200,10.79.15.13:9200,10.79.15.14:9200,10.79.15.15:9200,10.79.15.16:9200,10.79.15.17:9200,10.79.15.18:9200,10.79.15.19:9200
+hosts   10.79.15.12:9200,10.79.15.13:9200,10.79.15.14:9200,10.79.15.15:9200,10.79.15.16:9200,10.79.15.17:9200,10.79.15.18:9200,10.79.15.19:9200,10.79.15.20:9200,10.79.15.21:9200,10.79.15.22:9200,10.79.15.23:9200,10.79.15.24:9200,10.79.15.25:9200,10.79.15.26:9200,10.79.15.27:9200
+#hosts   iln02.stanford.edu:9122,iln03.stanford.edu:9123,iln04.stanford.edu:9124,iln05.stanford.edu:9125,iln06.stanford.edu:9126,iln07.stanford.edu:9127,iln08.stanford.edu:9128:iln09.stanford.edu:9129
 #hosts   iln02.stanford.edu:9200,iln03.stanford.edu:9200,iln04.stanford.edu:9200,iln05.stanford.edu:9200,iln06.stanford.edu:9200,iln07.stanford.edu:9200,iln08.stanford.edu:9200,iln09.stanford.edu:9200,iln10.stanford.edu:9200,iln11.stanford.edu:9200,iln12.stanford.edu:9200,iln13.stanford.edu:9200,iln14.stanford.edu:9200,iln15.stanford.edu:9200,iln16.stanford.edu:9200,iln17.stanford.edu:9200
 init    hanworks/snapworld/supervisor.sh
 debug   False
 snapshot False
 
-par_tasks 8
+par_tasks 18
 
-var     nodes           20,000,000
-var     range           400,000
-var     stat_tasks      3
-var     gen_tasks       50
-
-#var     nodes           50,000,000
-#var     range           100,000
+#var     nodes           20,000,000
+#var     range           400,000
 #var     stat_tasks      3
-#var     gen_tasks       500
+#var     gen_tasks       50
+
+var     nodes           50,000,000
+var     range           200,000
+var     stat_tasks      3
+var     gen_tasks       250
 
 #var     nodes           100,000
 #var     range           2,000
