Added size+throughput to broker. Added exp+rand backoff.

--- a/snapw.config
+++ b/snapw.config
@@ -8,22 +8,22 @@ init    hanworks/snapworld/supervisor.sh
 debug   False
 snapshot False
 
-par_tasks 18
+par_tasks 20
 
 #var     nodes           20,000,000
 #var     range           400,000
 #var     stat_tasks      3
 #var     gen_tasks       50
 
-var     nodes           50,000,000
-var     range           200,000
+var     nodes           450,000,000
+var     range           1,500,000
 var     stat_tasks      3
-var     gen_tasks       250
+var     gen_tasks       300
 
-#var     nodes           100,000
-#var     range           2,000
-#var     stat_tasks      3
-#var     gen_tasks       50
+var     nodes           100,000
+var     range           2,000
+var     stat_tasks      3
+var     gen_tasks       50
 
 bunch   GenTasks        size    1               range   $range  exec    GenTasks.py,swlib.py,client.py,perf.py
 bunch   GenStubs        size    $gen_tasks      range   1       exec    GenStubsCpp.py,swlib.py,client.py,snap.py,_snap.so,perf.py
